further fix z-index mobile menu

--- a/src/resources/App.css
+++ b/src/resources/App.css
@@ -57,10 +57,12 @@ nav {
 #button-list {
   display: flex;
   align-items: center;
+  z-index: 10;
 }
 
 #button-list button {
   background-color: rgba(24, 24, 24, 1);
+  z-index: 10;
 
   border: 1px solid #bbb;
   border-radius: 5px;
@@ -419,6 +421,7 @@ nav {
     background-color: white;
     padding: 17px 20px;
     color: black;
+    z-index: 10;
   }
 
   .circle1 {
